[package]
name = "tokio-modbus"
description = "Tokio-based Modbus library"
version = "0.4.0"
authors = ["slowtec GmbH", "Markus Kohlhase <markus.kohlhase@slowtec.de>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["fieldbus", "modbus", "hardware", "automation"]
homepage = "https://github.com/slowtec/tokio-modbus"
repository = "https://github.com/slowtec/tokio-modbus"
edition = "2018"

[dependencies]
bytes = "0.4"
byteorder = "1"
futures-core-preview = "0.3.0-alpha.19"
log = "0.4"
smallvec = { version = "0.6", default-features = false }
tokio-io = "0.2.0-alpha.6"
tokio= "0.2.0-alpha.6"
tokio-codec = "0.2.0-alpha.6"
# tokio-proto = "0.1"
# tokio-service = "0.2.0-alpha.6"

# Disable default-features to exclude unused dependency on libudev
tokio-serial = { version = "3.3", optional = true, default-features = false }

[dev-dependencies]
env_logger = "0.6"

[features]
default = ["tcp", "rtu", "sync"]
rtu = ["tokio-serial"]
tcp = []
sync = []

[badges]
travis-ci = { repository = "slowtec/tokio-modbus" }
coveralls = { repository = "slowtec/tokio-modbus", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }
